cmake: add the simple execution test
Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,8 @@ include (GNUInstallDirs)
 # ${PROJECT_NAME}.
 project (lpn-example-bin CXX)
 
+# Enable CTest environment
+enable_testing()
+
 # Add the example source directory.
 add_subdirectory (src)
